--- a/RSP_pip/devel/pypi/README
+++ b/RSP_pip/devel/pypi/README
@@ -4,14 +4,13 @@
 python3 -m venv RSP_env
 source RSP_env/bin/activate
 
-## install dependencies to install developers module
-pip install -r ../rnaseqpipe/devel/pypi/requirements.txt
-
 # move to folder with code, it contains: main/, rnaseqpipe/, devel/, setup.py, README, etc
-cd ../rnaseqpipe/
+
+## install dependencies to install developers module
+pip install -r devel/pypi/requirements.txt
 
 ## install dependencies
-pip install -r rnaseqpipe/config/python/python_requirement_summary.txt 
+pip install -r config/python/python_requirement_summary.txt 
 
 ## create developer installation
 sh devel/pypi/test_module.sh
